Distinguish OutOfMemoryError's and print more helpful hint.